# viber_linkparser_fuzzer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  harness.c  liblinkparser.so.h  utf8.h
.cargo/: config.toml
corpus/: corpus.txt  corpus_0015.txt  corpus_0024.txt  corpus_0025.txt  corpus_0028.txt  corpus_0030.txt  corpus_0031.txt  corpus_0032.txt  corpus_0035.txt  corpus_0036.txt  corpus_0042.txt  corpus_0045.txt  corpus_0049.txt  corpus_0050.txt  corpus_0051.txt  corpus_0052.txt  corpus_0053.txt  corpus_0058.txt  corpus_0063.txt  corpus_0064.txt  corpus_0065.txt  corpus_0066.txt  corpus_0067.txt  corpus_0071.txt  corpus_0073.txt  corpus_0074.txt  corpus_0075.txt  corpus_0076.txt  corpus_0077.txt  corpus_0078.txt  corpus_0079.txt  corpus_0080.txt  corpus_0081.txt  corpus_0082.txt  corpus_0083.txt  corpus_0084.txt  corpus_0088.txt  corpus_0089.txt  corpus_0090.txt  corpus_0091.txt  (+169 more)
src/: fuzzer.rs
