[package]
name = "frida_fuzzer"
version = "0.1.0"
authors = ["saruman9 <rum.274.4@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
libafl = { path = "LibAFL/libafl/", features = [ "std", "llmp_compression", "llmp_bind_public", "frida_cli" ] } #,  "llmp_small_maps", "llmp_debug"]}
frida-gum = { version = "0.8.1", features = [ "auto-download", "event-sink", "invocation-listener" ] }
libafl_frida = { path = "LibAFL/libafl_frida", features = [ "cmplog" ] }
libafl_targets = { path = "LibAFL/libafl_targets", features = [ "sancov_cmplog" ] }
libloading = "0.8.0"
mimalloc = { version = "0.1.37", default-features = false }
color-backtrace = "0.5.1"
pretty_env_logger = "0.5.0"
